# random-walk-mcmc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_target_distributions.ipynb  02_random_walk_mcmc.ipynb  04_step_size_sensitivity.ipynb
src/rwmcmc/: __init__.py  samplers.py  targets.py
