[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwmcmc"
version = "0.1.0"
description = "Random Walk Metropolis-Hastings sampler and benchmarks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Enes Caglar Korkmazgoz" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]